RESOLVED FIXED235218
[LFC][IFC] Incorrect root inline box position when non-empty atomic inline level child box has height: 0px
https://bugs.webkit.org/show_bug.cgi?id=235218
Summary [LFC][IFC] Incorrect root inline box position when non-empty atomic inline le...
alan
Reported 2022-01-13 20:14:25 PST
ssia
Attachments
Patch (4.37 KB, patch)
2022-01-13 20:21 PST, alan
no flags
alan
Comment 1 2022-01-13 20:14:59 PST
alan
Comment 2 2022-01-13 20:21:51 PST
EWS
Comment 3 2022-01-14 05:41:27 PST
Committed r288015 (246041@main): <https://commits.webkit.org/246041@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449132 [details].
Note You need to log in before you can comment on or make changes to this bug.